# bms-freertos-scheduler

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md
cmake/: arm-none-eabi-toolchain.cmake
src/: bms_tasks.h  bms_thresholds.h  bms_types.h  main.c  mps2_an385.ld  semihosting_io.c  startup_mps2_an385.c  uart.h
src/tasks/: battery_measurement.c  battery_sim.c  battery_sim.h  can_frame.h  can_tx.c  fault_diag.c  relay_decision.c  state_machine.c  sys_monitor.c
